sfdx-source/core/main/schema/objects/ApplicationFactory_SelectorBinding__mdt/fields/BindingSObject__c.field-meta.xml
<CustomField>
    <fullName>BindingSObject__c</fullName>
    <description>The SObject that this Application Factory Selector Binding is mapped to.</description>
    <inlineHelpText>The SObject that this Application Factory Selector Binding is mapped to.</inlineHelpText>
    <label>Binding SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>ApplicationFactory_SelectorBindings</relationshipLabel>
    <relationshipName>ApplicationFactory_SelectorBindings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>