sfdx-source/core/main/schema/objects/ApplicationFactory_SelectorBinding__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>When multiple concrete classes are specified for a SObject, the number specifies which concretion should be returned.  Higher numbers are higher priority; null values are the least priority.</description>
    <inlineHelpText>When multiple concrete classes are specified for a SObject, the number specifies which concretion should be returned.  Higher numbers are higher priority; null values are the least priority.</inlineHelpText>
    <label>Priority</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>