sfdx-source/core/main/schema/objects/ApplicationFactory_SelectorBinding__mdt/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <description>The Selector implementation class that is an implementation of the IApplicationSObjectSelector</description>
    <inlineHelpText>The Selector implementation class that is an implementation of the IApplicationSObjectSelector</inlineHelpText>
    <label>To</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>