sfdx-source/core/main/schema/objects/ApplicationFactory_SelectorBinding__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>BindingSObject__c</columns>
    <columns>To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>